force-app/main/default/objects/Exam__c/fields/Academic_Course__c.field-meta.xml
<CustomField>
    <fullName>Academic_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Course</label>
    <referenceTo>Academic_Course__c</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>