force-app/main/default/objects/Exam__c/fields/Practical_mark__c.field-meta.xml
<CustomField>
    <fullName>Practical_mark__c</fullName>
    <label>Practical mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>