force-app/main/default/objects/Exam__c/fields/Theroy_mark__c.field-meta.xml
<CustomField>
    <fullName>Theroy_mark__c</fullName>
    <label>Theroy mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>